ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0, 5.0.6, 5.2.0-rc5
    • Affects Version/s: 5.0.3
    • Component/s: None
    • Fully Compatible
    • ALL
    • v5.2, v5.0
    • Hide

      Client side:

      • Using golang driver
      • Setup 6 concurrent connections to insert continuously to a Time-Series collections using InsertMany
      • Each batch contains about 100k documents

      Server side:

      • Mongo version 5.0.3
      • Replica-set: 1 primary, 1 secondary
      Show
      Client side: Using golang driver Setup 6 concurrent connections to insert continuously to a Time-Series collections using InsertMany Each batch contains about 100k documents Server side: Mongo version 5.0.3 Replica-set: 1 primary, 1 secondary
    • Execution Team 2021-12-27
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      My service has 6 threads and concurrently write to a Time-Series collection using InsertMany. My mongo server is a replica set with one primary and one secondary. After few successful insertions, in the mongo db server log I'm getting this error then the server is shutdown. And I did use any transaction in my code.

      {{

      {"t":\{"$date":"2021-10-25T16:24:03.520+07:00"}

      ,"s":"F", "c":"-", "id":23081, "ctx":"conn66","msg":"Invariant failure","attr":{"expr":"batchStatus == ErrorCodes::TimeseriesBucketCleared || batchStatus.isA<ErrorCategory::Interruption>()","msg":"Unexpected error when aborting time-series batch: WriteConflict: WriteConflict error: this operation conflicted with another operation. Please retry your operation or multi-document transaction.","file":"src/mongo/db/timeseries/bucket_catalog.cpp","line":381}}}}

      What is happening to my mongo server and how can I solve this? I try to google it but did have any luck.

            Assignee:
            Dan Larkin-York
            Reporter:
            hung hoang
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: