SERVER-60959 Remove assumptions about error type when aborting a time-series insert batch